# hello

./: CMakeLists.txt  azure-pipelines.yml
src/: DoMath.cpp  DoMath.h
test/: CMakeLists.txt  Tests.cpp
